[package]
name = "noise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs-next = "2.0.0"
iced = { version = "0.12.1", features = ["tokio", "advanced"] }
iced_aw = { version = "0.8.0",default-features=false, features = ["wrap", "icons"] }
# iced = { git = "https://github.com/iced-rs/iced.git", features = ["advanced","tokio"] }
kira = "0.8.7"
walkdir = "2.5.0"
